[project]
name = "YNAmazon"
dynamic = ["version"]
description = "YNAmazon - A program to annotate YNAB transactions with Amazon order info "
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "MIT"
dependencies = [
    "amazon-orders>=3.2.15",
    "loguru>=0.7.3",
    "pydantic[email]>=2.11.2",
    "pydantic-settings>=2.8.1",
    "rich>=14.0.0",
    "ynab>=1.3.1",
    "typer>=0.15.2",
    "pydantic-core>=2.33.1",
    "furl>=2.1.4",
    "requests>=2.30.0",
    "cache-decorator>=2.2.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.12.0", # OpenAI Python client for AI summarization
]

[project.urls]
Repository = "https://github.com/DanielKarp/YNAmazon"
Issues = "https://github.com/DanielKarp/YNAmazon/issues"

[tool.hatch.version]
path = "src/ynamazon/__init__.py"

[project.scripts]
yna = "ynamazon.cli.cli:cli"

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.390",
    "ruff>=0.11.4",
    "types-requests>=2.32.0.20250328",
]
test = [
    "faker>=37.1.0",
    "polyfactory>=2.20.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[[tool.mypy.overrides]]
module = ["amazonorders.*"]
ignore_missing_imports = true

[tool.deptry]
known_first_party = ["ynamazon"]

[tool.semantic_release]
version_variables = ["src/ynamazon/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): {version}"
build_command = ""

[tool.semantic_release.changelog]
template_dir = ".github/templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
